--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ini4j-0.5.4.jar=lib/ini4j-0.5.4.jar
+file.reference.lev.jar=E:\\Users\\Theodore\\Source\\Repos\\Lev\\Lev Library Project\\dist\\lev.jar
+file.reference.skyproc.jar=E:\\Users\\Theodore\\Source\\Repos\\skyproc\\dist\\skyproc.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.skyproc.jar}:\
     ${file.reference.ini4j-0.5.4.jar}:\
-    ${reference.lev.jar}
+    ${file.reference.lev.jar}:\
+    ${file.reference.skyproc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,10 +77,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.lev=../lev/Lev Library Project
-project.skyproc=../skyproc
-reference.lev.jar=${project.lev}/dist/lev.jar
-reference.skyproc.jar=${project.skyproc}/dist/skyproc.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
